another pass at modernising AI stuff